changes read resources

--- a/index.html
+++ b/index.html
@@ -18,292 +18,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="css/AudioPlayer.css">
     <link rel="stylesheet" href="css/material.min.css">
+    <link rel="stylesheet" href="css/sg-main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js?beta=1.0.1"></script>
-    <style type="text/css">
-    body * {
-        font-family: "Helvetica Neue", sans-serif;
-        font-size: 14px;
-        line-height: 15px;
-        letter-spacing: 0.5px;
-    }
-
-    body a img {
-        max-width: 100%;
-        width: 100%;
-        height: 100%
-    }
-
-    h1.logo {
-        font-family: 'Monoton', cursive;
-        font-size: 46px;
-        text-align: center;
-        color: #2196F3;
-        margin: 60px 0px 10px 0px;
-        font-weight: normal;
-        letter-spacing: -2px;
-        line-height: 40px;
-    }
-
-    .content {
-        max-width: 1060px;
-        margin: 0px auto 60px auto;
-        width: 100%;
-    }
-
-    .mdl-grid {
-        align-items: start;
-    }
-
-    .box-normal.mdl-cell {
-        background: #fff;
-        position: relative;
-    }
-
-    .pad-md {
-        padding: 15px;
-        border: 1px solid #ddd;
-        border-left: 5px solid #ddd;
-    }
-
-    h5,
-    h6 {
-        margin: 0px;
-        color: #616161;
-    }
-
-    .input {
-        width: 100%;
-        padding: 0px 10px;
-        box-sizing: border-box;
-        line-height: 40px;
-        font-size: 16px;
-        outline: none;
-        box-shadow: none;
-        border: 1px solid #ddd;
-        margin-bottom: 5px;
-    }
-
-    .mdl-button input {
-        height: 0px;
-        width: 0px;
-        font-size: 0px;
-        line-height: 0px;
-    }
-
-    .sp--1-right {
-        margin-right: 10px;
-    }
-
-    .mdl-list__item-avatar,
-    .mdl-list__item-avatar.material-icons,
-    .material-icons.sp--1-right {
-        background: #2196F3;
-        color: #fff;
-        border-radius: 50%;
-    }
-
-    .material-icons {
-        color: #616161;
-    }
-
-    .mdl-button .material-icons:hover {
-        color: #2196F3;
-    }
-
-    .mdl-snackbar {
-        top: 0;
-        bottom: auto;
-        background: #2196F3;
-        transform: translate(-50%, -80px);
-    }
-
-    .mdl-snackbar--active {
-        transform: translate(-50%, 0px);
-    }
-
-    .box-normal .mdl-list__item {
-        padding: 10px 0px;
-        transition: all 0.5s ease-in-out;
-    }
-
-    .box-normal .mdl-list__item .name-track {
-        color: #757575;
-    }
-
-    .box-normal .mdl-list__item:hover {
-        cursor: pointer;
-    }
-
-    .box-normal .mdl-list__item .name-track {
-        overflow: hidden;
-        padding-right: 0px;
-        cursor: pointer;
-        text-align: left;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-    }
-
-    .mdl-list__item .mdl-list__item-primary-content {
-        min-width: 155px;
-    }
-
-    .mdl-list__item:hover .material-icons.mdl-list__item-avatar,
-    .mdl-list__item:hover .sp--1-right {
-        background: #616161;
-    }
-
-    .ap {
-        border-top: 1px solid #ddd;
-        background: #fff;
-    }
-
-    .pl-list .material-icons {
-        line-height: 53px;
-        color: #2196F3;
-    }
-
-    .pl-list--current .material-icons {
-        display: none;
-    }
-
-
-    .mdl-spinner {
-        display: block;
-        position: relative;
-        width: 30px;
-        height: 30px;
-        margin: 20% auto;
-    }
-
-    @media only screen and (max-width: 479px) {
-        .box-normal .mdl-list__item .name-track {
-            white-space: normal;
-            width: auto !important;
-        }
-        .mdl-snackbar {
-            left: 50%;
-        }
-        .mdl-progress {
-            width: 100% !important;
-            right: auto !important;
-            bottom: auto !important;
-            left: auto;
-            top: 0px;
-        }
-        .mdl-list__item .mdl-list__item-primary-content {
-            min-width: 155px;
-        }
-        .pl-ul {
-            width: 100%;
-            padding: 0px;
-            max-width: 98%;
-            right: 0px;
-            left: 0px;
-            bottom: 15%;
-        }
-        .pad-md {
-            order: 1;
-        }
-    }
-
-    @media only screen and (max-width: 768px) {
-        .mdl-list__item .mdl-list__item-primary-content {
-            max-width: 100%;
-        }
-    }
-
-    @media (min-width: 480px) {
-        .mdl-snackbar {
-            min-width: auto;
-            max-width: 568px;
-            border-radius: 0;
-        }
-    }
-
-    .mdl-progress {
-        width: 24%;
-        margin: 0px auto;
-        position: absolute;
-        left: 12%;
-        top: 17%;
-        z-index: 10;
-        background: transparent;
-    }
-
-    .mdl-progress>.progressbar {
-        background-color: #2196F3 !important;
-    }
-
-    .mdl-progress>.bufferbar,
-    .mdl-progress>.auxbar {
-        background: none !important;
-    }
-
-    .mdl-snackbar__text {
-        padding: 14px 0px;
-    }
-
-    .--info {
-        line-height: 43px;
-        padding: 0px 10px;
-        color: #fff;
-    }
-
-    .pl-ul {
-        margin: 1% auto 4.5% auto;
-        padding: 1%;
-        border: 1px solid #ddd;
-        border-top: 5px solid #ddd;
-        position: fixed;
-        right: 2%;
-        top: auto;
-        bottom: 0px;
-        height: 495px;
-        min-height: 200px;
-        background: #fff;
-        overflow: auto;
-        max-width: 375px;
-        box-shadow: none;
-    }
-
-    .pl-container {
-        background: none;
-        overflow: hidden;
-        top: 10px;
-        right: 1%;
-        bottom: 0px;
-        left: auto;
-        z-index: 10;
-    }
-
-    .pl-container.h-show {
-        display: block;
-    }
-
-    ::-webkit-scrollbar-track {
-        background-color: #fff;
-    }
-
-    ::-webkit-scrollbar {
-        width: 5px;
-        background-color: #fff;
-    }
-
-    ::-webkit-scrollbar-thumb {
-        background-color: #ddd;
-    }
-
-    /****/
-    .mdl-badge[data-badge]:after{
-        background: #ddd;
-        color: #fff;
-    }
-    .mdl-badge.--track-added[data-badge]:after{
-        background: #2196F3;
-    }
-
-
-    </style>
 </head>
 
 <body>
@@ -318,8 +34,9 @@
                     </div>
                     <div class="box-normal mdl-cell mdl-cell--8-col mdl-cell--12-col-tablet">
                         <input type="text" class="input" placeholder="Buscar artista/canción" id="sh-input">
-                        <a target="_blank" href="https://www.bestchange.com/?p=636866"><img src="http://www.bestchange.com/images/banners/468x60-16.gif" alt="E-money exchange listing" title="E-currency exchanger monitor BestChange.com" width="468" height="60" border="0" /></a>
                         <div class="mdl-list list-result"></div>
+                        <a target="_blank" href="https://www.bestchange.com/?p=636866"><img src="http://www.bestchange.com/images/banners/468x60-16.gif" alt="E-money exchange listing" title="E-currency exchanger monitor BestChange.com" width="468" height="60" border="0" /></a>
+                        <span class="disclaimer">Songet &copy; 2018 - Disclaimer: este sitio no almacena ningún archivo en su servidor. Todos los contenidos son proporcionados por terceros no afiliados</span>
                     </div>
                 </div>
                 <div id="show-notywrap" class="mdl-js-snackbar mdl-snackbar">
