--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                         <input type="text" class="filter" onkeyup="s_tracks(this,'#list-top')" placeholder="Filtrar canción">
                         <h6>&#9733; Lo ultimo!</h6>
                         <ul class="list mdl-list list-top" id="list-top"></ul>
+                        <a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" href="reports.html">Comentanos!</a>
                         <span class="disclaimer">Songet &copy; 2018 - Disclaimer: este sitio no almacena ningún archivo en su servidor. Todos los contenidos son proporcionados por terceros no afiliados</span>
                     </div>
                 </div>
@@ -116,7 +117,6 @@
     </div>
     <!-- Audio player js begin-->
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/list.js/1.5.0/list.min.js"></script>
     <script src="js/AudioPlayer.js?beta=1.0.1"></script>
     <script src="js/fn-main.js?beta=1.0.1"></script>
 </body>
