update libs radio

--- a/radio.html
+++ b/radio.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Radio Songet</title>
+    <script type="text/javascript" src="https://www.radionomy.com/js/jquery.min.js?v171214"></script>
+	<script type="text/javascript" src="https://www.radionomy.com/js/jquery.jplayer.min.js?v171214"></script>
+
 </head>
 <body>
     <div class="radionomy-player"></div>
